--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"type": "project",
 	"license": "AGPL-3.0-or-later",
 	"require-dev": {
+		"symfony/event-dispatcher": "^5.4.22",
 		"nextcloud/ocp": "^27.0.0",
 		"psalm/phar": "^5.12.0",
 		"nextcloud/coding-standard": "^1.1.1"
