--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,8 @@ steps:
   - name: php7.4
     image: php:7.4-cli
     commands:
+      - apt-get update
+      - apt-get install -y unzip
       - curl -sSLo /usr/local/bin/composer https://getcomposer.org/download/latest-stable/composer.phar
       - chmod +x /usr/local/bin/composer
       - composer install
@@ -16,6 +18,8 @@ steps:
   - name: nextcloud
     image: nextcloud:27.0.0
     commands:
+      - apt-get update
+      - apt-get install -y unzip
       - curl -sSLo /usr/local/bin/composer https://getcomposer.org/download/latest-stable/composer.phar
       - chmod +x /usr/local/bin/composer
       - composer install
